--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "multer": "^2.0.1",
     "nodemailer": "^7.0.5",
     "socket.io": "^4.8.1",
+    "stripe": "^18.3.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
