--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^8.16.3",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "socket.io": "^4.8.1",
     "stripe": "^18.3.0",
@@ -51,6 +52,7 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.0.13",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
