--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "helmet": "^8.1.0",
     "http-status": "^2.1.0",
     "http-status-codes": "^2.3.0",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
+    "redis": "^5.8.1",
     "socket.io": "^4.8.1",
     "stripe": "^18.3.0",
     "zod": "^4.0.14"
