--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.864.0",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "colors": "^1.4.0",
     "compression": "^1.8.0",
@@ -41,6 +43,7 @@
     "zod": "^4.0.14"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/bcrypt": "^5.0.2",
     "@types/colors": "^1.1.3",
     "@types/compression": "^1.8.1",
